backport_test/merge_ble_mesh_node_and_provioner_in_console_4.0

--- a/examples/bluetooth/esp_ble_mesh/ble_mesh_console/Makefile
+++ b/examples/bluetooth/esp_ble_mesh/ble_mesh_console/Makefile
@@ -3,7 +3,7 @@
 # project subdirectory.
 #
 
-PROJECT_NAME := ble_mesh_console_node
+PROJECT_NAME := ble_mesh_console
 
 COMPONENT_ADD_INCLUDEDIRS := components/include
 
