--- a/examples/bluetooth/esp_ble_mesh/ble_mesh_console/CMakeLists.txt
+++ b/examples/bluetooth/esp_ble_mesh/ble_mesh_console/CMakeLists.txt
@@ -3,4 +3,4 @@
 cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(ble_mesh_console_provisioner)
+project(ble_mesh_console)
