doc: linux host test documentation

--- a/components/nvs_flash/host_test/nvs_page_test/CMakeLists.txt
+++ b/components/nvs_flash/host_test/nvs_page_test/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 set(COMPONENTS main)
-idf_build_set_property(CONFIG_SPI_FLASH_MOCK 1)
+idf_component_set_property(spi_flash USE_MOCK 1)
 idf_build_set_property(COMPILE_DEFINITIONS "-DNO_DEBUG_STORAGE" APPEND)
 project(host_nvs_page_test)
 
