optimization config option LWIP_TCPIP_CORE_LOCKING

--- a/components/lwip/Kconfig
+++ b/components/lwip/Kconfig
@@ -15,6 +15,16 @@ menu "LWIP"
             could be used to convert network interface index to name
             instead of IDF specific esp-netif APIs (such as esp_netif_get_netif_impl_name())
 
+    config LWIP_TCPIP_CORE_LOCKING
+        bool "Enable tcpip　core locking"
+        default n
+        help
+            If Enable tcpip　core locking,Creates a global mutex that is held
+            during TCPIP thread operations.Can be locked by client code to perform
+            lwIP operations without changing into TCPIP thread using callbacks.
+            See LOCK_TCPIP_CORE() and UNLOCK_TCPIP_CORE().
+
+            If disable tcpip　core locking,TCP IP will perform tasks through context switching．
 
     config LWIP_DNS_SUPPORT_MDNS_QUERIES
         bool "Enable mDNS queries in resolving host name"
