esp32c3: memprot API upgrade and test application
Closes IDF-2641

--- a/components/esp32c3/ld/esp32c3.project.ld.in
+++ b/components/esp32c3/ld/esp32c3.project.ld.in
@@ -369,6 +369,8 @@ SECTIONS
   {
     /* C3 memprot requires 512 B alignment for split lines */
     . = ALIGN (0x200);
+    /* iram_end_test section exists for use by memprot unit tests only */
+    *(.iram_end_test)
     _iram_text_end = ABSOLUTE(.);
   } > iram0_0_seg
 
