espsystem: Rearchitecture and fix eh_frame_parser bugs
eh_frame_parser is architecture independent, thus the files have
been rearchitectured. Some bugs have been fixed in the test.
A README file has also been added to eh_frame_parser host test
directory.

eh_frame_parser is now able to detect empty gaps in .eh_frame_hdr
table (missing DWARF information).
Fix a bug occuring when parsing backtraces originated from abort().
Fix build missing dependencies issue.

--- a/components/esp32c3/ld/esp32c3.project.ld.in
+++ b/components/esp32c3/ld/esp32c3.project.ld.in
@@ -339,22 +339,28 @@ SECTIONS
     *(.srodata.*)
     _thread_local_end = ABSOLUTE(.);
     _rodata_reserved_end = ABSOLUTE(.);
-    . = ALIGN(4);
+    . = ALIGN(ALIGNOF(.eh_frame));
   } > default_rodata_seg
 
-  .eh_frame :
+  /* Keep this section shall be at least aligned on 4 */
+  .eh_frame : ALIGN(8)
   {
-    _eh_frame = ABSOLUTE(.);
+    __eh_frame = ABSOLUTE(.);
     KEEP (*(.eh_frame))
-    _eh_frame_end = ABSOLUTE(.);
-  } > drom0_0_seg
+    __eh_frame_end = ABSOLUTE(.);
+    /* Guarantee that this section and the next one will be merged by making
+     * them adjacent. */
+    . = ALIGN(ALIGNOF(.eh_frame_hdr));
+  } > default_rodata_seg
 
-  .eh_frame_hdr :
+  /* To avoid any exception in C++ exception frame unwinding code, this section
+   * shall be aligned on 8. */
+  .eh_frame_hdr : ALIGN(8)
   {
-    _eh_frame_hdr = ABSOLUTE(.);
+    __eh_frame_hdr = ABSOLUTE(.);
     KEEP (*(.eh_frame_hdr))
-    _eh_frame_hdr_end = ABSOLUTE(.);
-  } > drom0_0_seg
+    __eh_frame_hdr_end = ABSOLUTE(.);
+  } > default_rodata_seg
 
   .flash.rodata_noload (NOLOAD) :
   {
