--- a/.gitlab/ci/host-test.yml
+++ b/.gitlab/ci/host-test.yml
@@ -355,3 +355,10 @@ test_log:
     - cd ${IDF_PATH}/components/log/host_test/log_test
     - idf.py build
     - build/test_log_host.elf
+
+test_eh_frame_parser:
+  extends: .host_test_template
+  script:
+    - cd ${IDF_PATH}/components/esp_system/test_eh_frame_parser
+    - make
+    - ./eh_frame_test
