I2C: enable all unit test for i2c on esp32c3

--- a/tools/ci/config/target-test.yml
+++ b/tools/ci/config/target-test.yml
@@ -601,7 +601,7 @@ UT_C3:
 
 UT_C3_FLASH:
   extends: .unit_test_c3_template
-  parallel: 3
+  parallel: 2
   tags:
     - ESP32C3_IDF
     - UT_T1_ESP_FLASH
@@ -612,6 +612,12 @@ UT_C3_SPI_DUAL:
   tags:
     - ESP32C3_IDF
     - Example_SPI_Multi_device
+
+UT_C3_I2C:
+  extends: .unit_test_c3_template
+  tags:
+    - ESP32C3_IDF
+    - UT_T2_I2C
 
 nvs_compatible_test:
   extends: .integration_test_template
