esp_flash: support override default chip driver list

--- a/components/spi_flash/CMakeLists.txt
+++ b/components/spi_flash/CMakeLists.txt
@@ -102,7 +102,7 @@ else()
                         REQUIRES hal
                         PRIV_REQUIRES "${priv_requires}"
                         INCLUDE_DIRS include
-                        PRIV_INCLUDE_DIRS private_include
+                        PRIV_INCLUDE_DIRS include/spi_flash
                         LDFRAGMENTS linker.lf)
 
     # Avoid cache miss by unexpected inlineing when built by -Os
