[nvs] add nvs page host test to CI
Closes IDF-2425

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,9 +90,11 @@ if(CONFIG_COMPILER_DUMP_RTL_FILES)
     list(APPEND compile_options "-fdump-rtl-expand")
 endif()
 
-if(CONFIG_COMPILER_HIDE_PATHS_MACROS)
-    list(APPEND compile_options "-fmacro-prefix-map=${CMAKE_SOURCE_DIR}=.")
-    list(APPEND compile_options "-fmacro-prefix-map=${IDF_PATH}=IDF")
+if(NOT ${CMAKE_C_COMPILER_VERSION} VERSION_LESS 8.0.0)
+    if(CONFIG_COMPILER_HIDE_PATHS_MACROS)
+        list(APPEND compile_options "-fmacro-prefix-map=${CMAKE_SOURCE_DIR}=.")
+        list(APPEND compile_options "-fmacro-prefix-map=${IDF_PATH}=IDF")
+    endif()
 endif()
 
 # GCC-specific options
