ci: run Example_GENERIC for C3
Add support for running example_GENERIC tests for C3 on label.

Fix examples that fail.

--- a/tools/ci/config/target-test.yml
+++ b/tools/ci/config/target-test.yml
@@ -326,6 +326,13 @@ example_test_016:
       - $CI_PROJECT_DIR/examples/*/*/*.log
       - $LOG_PATH
 
+example_test_C3_GENERIC:
+  extends: .example_test_template
+  parallel: 3
+  tags:
+    - ESP32C3
+    - Example_GENERIC
+
 test_app_test_001:
   extends: .test_app_template
   tags:
