--- a/components/esp_wifi/Kconfig
+++ b/components/esp_wifi/Kconfig
@@ -349,42 +349,22 @@ menu "Wi-Fi"
         help
             The maximum time that wifi keep alive, unit: seconds.
 
+    config ESP_WIFI_FTM_ENABLE
+        bool "WiFi FTM"
+        default n
+        depends on (IDF_TARGET_ESP32S2 || IDF_TARGET_ESP32C3)
+        help
+            Enable feature Fine Timing Measurement for calculating WiFi Round-Trip-Time (RTT).
+
     config ESP_WIFI_FTM_INITIATOR_SUPPORT
         bool "FTM Initiator support"
         default y
-        depends on (IDF_TARGET_ESP32S2 || IDF_TARGET_ESP32C3)
-
-    config ESP_WIFI_FTM_REPORT_LOG_ENABLE
-        bool "FTM Report logging"
-        default n
-        depends on ESP_WIFI_FTM_INITIATOR_SUPPORT
-        help
-            Select this option to get a detailed report of FTM Procedure with raw values
-
-    config ESP_WIFI_FTM_REPORT_SHOW_RTT
-        depends on ESP_WIFI_FTM_REPORT_LOG_ENABLE
-        bool "Show RTT values"
-        default y
-
-    config ESP_WIFI_FTM_REPORT_SHOW_DIAG
-        depends on ESP_WIFI_FTM_REPORT_LOG_ENABLE
-        bool "Show dialog tokens"
-        default y
-
-    config ESP_WIFI_FTM_REPORT_SHOW_T1T2T3T4
-        depends on ESP_WIFI_FTM_REPORT_LOG_ENABLE
-        bool "Show T1 to T4"
-        default y
-
-    config ESP_WIFI_FTM_REPORT_SHOW_RSSI
-        depends on ESP_WIFI_FTM_REPORT_LOG_ENABLE
-        bool "Show RSSI levels"
-        default y
+        depends on ESP_WIFI_FTM_ENABLE
 
     config ESP_WIFI_FTM_RESPONDER_SUPPORT
         bool "FTM Responder support"
         default y
-        depends on (IDF_TARGET_ESP32S2 || IDF_TARGET_ESP32C3)
+        depends on ESP_WIFI_FTM_ENABLE
 
     config ESP_WIFI_STA_DISCONNECTED_PM_ENABLE
         bool "Power Management for station at disconnected"
