--- a/components/spi_flash/CMakeLists.txt
+++ b/components/spi_flash/CMakeLists.txt
@@ -82,7 +82,9 @@ else()
         endif()
 
         if(CONFIG_IDF_TARGET_ESP32S3)
-            list(APPEND srcs "spi_flash_timing_tuning.c")
+            list(APPEND srcs
+                "esp32s3/spi_timing_config.c"
+                "spi_flash_timing_tuning.c")
         endif()
 
         # New implementation after IDF v4.0
