--- a/components/console/CMakeLists.txt
+++ b/components/console/CMakeLists.txt
@@ -4,4 +4,5 @@ idf_component_register(SRCS "commands.c"
                             "argtable3/argtable3.c"
                             "linenoise/linenoise.c"
                     INCLUDE_DIRS "."
-                    REQUIRES vfs)
+                    REQUIRES vfs
+                    PRIV_REQUIRES driver)
