--- a/components/freertos/test/CMakeLists.txt
+++ b/components/freertos/test/CMakeLists.txt
@@ -1,4 +1,3 @@
 idf_component_register(SRC_DIRS .
                        PRIV_INCLUDE_DIRS .
-                       PRIV_REQUIRES cmock test_utils esp_ipc
-                      )
+                       PRIV_REQUIRES cmock test_utils esp_ipc driver)
