--- a/components/esp32s3/Kconfig
+++ b/components/esp32s3/Kconfig
@@ -456,6 +456,24 @@ menu "ESP32S3-Specific"
               In case more value will help improve the definition of the launch of the crystal.
               If the crystal could not start, it will be switched to internal RC.
 
+    config ESP32S3_DEEP_SLEEP_WAKEUP_DELAY
+        int "Extra delay in deep sleep wake stub (in us)"
+        default 2000
+        range 0 5000
+        help
+            When ESP32S3 exits deep sleep, the CPU and the flash chip are powered on
+            at the same time. CPU will run deep sleep stub first, and then
+            proceed to load code from flash. Some flash chips need sufficient
+            time to pass between power on and first read operation. By default,
+            without any extra delay, this time is approximately 900us, although
+            some flash chip types need more than that.
+
+            By default extra delay is set to 2000us. When optimizing startup time
+            for applications which require it, this value may be reduced.
+
+            If you are seeing "flash read err, 1000" message printed to the
+            console after deep sleep reset, try increasing this value.
+
     config ESP32S3_NO_BLOBS
         bool "No Binary Blobs"
         depends on !BT_ENABLED
