esp_eth: apply generic error check macros

--- a/components/esp_eth/CMakeLists.txt
+++ b/components/esp_eth/CMakeLists.txt
@@ -19,7 +19,7 @@ if(CONFIG_ETH_ENABLED)
     endif()
 
     if(CONFIG_ETH_USE_ESP32_EMAC)
-        list(APPEND srcs "src/esp_eth_mac_esp32.c"
+        list(APPEND srcs "src/esp_eth_mac_esp.c"
                          "src/esp_eth_phy_dp83848.c"
                          "src/esp_eth_phy_ip101.c"
                          "src/esp_eth_phy_ksz80xx.c"
