--- a/components/hal/CMakeLists.txt
+++ b/components/hal/CMakeLists.txt
@@ -56,11 +56,11 @@ if(NOT BOOTLOADER_BUILD)
                     "pcnt_hal.c"
                     "spi_flash_hal_gpspi.c"
                     "spi_slave_hd_hal.c"
+                    "systimer_hal.c"
                     "touch_sensor_hal.c"
                     "esp32s2/adc_hal.c"
                     "esp32s2/brownout_hal.c"
                     "esp32s2/cp_dma_hal.c"
-                    "esp32s2/systimer_hal.c"
                     "esp32s2/touch_sensor_hal.c"
                     "esp32s2/dac_hal.c"
                     "esp32s2/interrupt_descriptor_table.c"
@@ -75,10 +75,10 @@ if(NOT BOOTLOADER_BUILD)
             "pcnt_hal.c"
             "spi_flash_hal_gpspi.c"
             "spi_slave_hd_hal.c"
+            "systimer_hal.c"
             "touch_sensor_hal.c"
             "esp32s3/brownout_hal.c"
             "esp32s3/interrupt_descriptor_table.c"
-            "esp32s3/systimer_hal.c"
             "esp32s3/touch_sensor_hal.c")
     endif()
 
@@ -86,12 +86,12 @@ if(NOT BOOTLOADER_BUILD)
         list(APPEND srcs
               "ds_hal.c"
               "gdma_hal.c"
-              "esp32c3/adc_hal.c"
-              "esp32c3/brownout_hal.c"
-              "esp32c3/systimer_hal.c"
-              "esp32c3/hmac_hal.c"
               "spi_flash_hal_gpspi.c"
               "spi_slave_hd_hal.c"
+              "systimer_hal.c"
+              "esp32c3/adc_hal.c"
+              "esp32c3/brownout_hal.c"
+              "esp32c3/hmac_hal.c"
               "esp32c3/rtc_cntl_hal.c")
     endif()
 endif()
