--- a/components/esp32s2/ld/esp32s2.project.ld.in
+++ b/components/esp32s2/ld/esp32s2.project.ld.in
@@ -339,7 +339,13 @@ SECTIONS
     . = ALIGN(4);
   } >default_rodata_seg
 
-  _flash_rodata_align = ALIGNOF(.flash.rodata);
+  .flash.rodata_noload (NOLOAD) :
+  {
+    . = ALIGN (4);
+    mapping[rodata_noload]
+  } > default_rodata_seg
+
+  _flash_rodata_align = ALIGNOF(.flash.rodata_noload);
 
   .flash.text :
   {
