[system]: Made longjmp save for context switch
* Patched longjmp to be context-switch safe
  longjmp modifies the windowbase and windowstart
  registers, which isn't safe if a context switch
  occurs during the modification. After a context
  switch, windowstart and windowbase will be
  different, leading to a wrongly set windowstart
  bit due to longjmp writing it based on the
  windowbase before the context switch. This
  corrupts the registers at the next window
  overflow reaching that wrongly set bit.

  The solution is to disable interrupts during
  this code. It is only 6 instructions long,
  the impact shouldn't be significant.

  The fix is implemented as a wrapper which
  replaces the original first instructions of
  longjmp which are buggy. Then, it jumps back
  to execute the rest of the original longjmp
  function.

  Added a comparably reliable test to the
  test apps.

--- a/components/esp_rom/CMakeLists.txt
+++ b/components/esp_rom/CMakeLists.txt
@@ -9,7 +9,7 @@ if(BOOTLOADER_BUILD)
     target_linker_script(${COMPONENT_LIB} INTERFACE "${scripts}")
 else()
     # Regular app build
-    idf_component_register(SRCS "esp_rom.c"
+    idf_component_register(SRCS "esp_rom.c" "patches/esp_rom_longjmp.S"
                         INCLUDE_DIRS include)
 
     set(scripts
@@ -35,4 +35,6 @@ else()
     if(NOT CONFIG_SPI_FLASH_ROM_DRIVER_PATCH)
         target_linker_script(${COMPONENT_LIB} INTERFACE "esp32/ld/esp32.rom.spiflash.ld")
     endif()
+
+    target_link_libraries(${COMPONENT_LIB} INTERFACE "-Wl,--wrap=longjmp")
 endif()
